--- a/Python Basic/List.ipynb
+++ b/Python Basic/List.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,21 +62,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('list after swaping:-', ['E', 'D', 'C', 'B', 'A'])"
+       "['E', 'B', 'C', 'D', 'A']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#output\n",
     "swap_any(lst,1,3)"
    ]
   },
@@ -85,7 +86,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#wpp to swap element in string list"
+   ]
   }
  ],
  "metadata": {
